syntax = "proto3";
package DomainServices.DocumentOnSAService.StartSigning;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";
import "DocumentOnSA.proto";


message StartSigningRequest {

	google.protobuf.Int32Value SalesArrangementId = 1;
	google.protobuf.Int32Value DocumentTypeId = 2;
	google.protobuf.Int32Value SignatureMethodId = 3;
}

message StartSigningResponse {
	DocumentOnSA DocumentOnSa = 1;
}